--- a/test.ipynb
+++ b/test.ipynb
@@ -4,18 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Name"
+    "## Project Name: SICSS Git Test\n",
+    "\n",
+    "Basis Data Sciene tests below"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.28579092 0.48188891 0.60111473]\n",
+      " [0.58675412 0.57222316 0.81988667]\n",
+      " [0.38436668 0.20299269 0.92809278]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.random.rand(3, 3))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
