Updates the notebook!

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,38 +6,29 @@
    "source": [
     "## Project Name: SICSS Git Test\n",
     "\n",
-    "Basis Data Sciene tests below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "source": [
+    "\n",
+    "\\---\n",
+    "\n",
     "This is a test from Hannah. hi"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example for branch"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test = 1+1"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic Data Sciene tests below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -46,23 +37,41 @@
     }
    },
    "outputs": [],
-   "source": []
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.28579092 0.48188891 0.60111473]\n",
-      " [0.58675412 0.57222316 0.81988667]\n",
-      " [0.38436668 0.20299269 0.92809278]]\n"
-     ]
-    }
-   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "print(np.random.rand(3, 3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example for branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
